+mustafa | made changes in invoice generate tab to make table design same as in preview tab and fix alignment

--- a/src/app/invoice/generate/invoice.generate.component.css
+++ b/src/app/invoice/generate/invoice.generate.component.css
@@ -1,16 +1,31 @@
 .flex-container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  flex-flow: row wrap;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-flow: row wrap;
 }
-.table.basic tbody tr td{
-  background-color: #fff;
+
+table {
+    table-layout: fixed
 }
-.table.basic .table tbody tr td{
-  border: none;
+
+.table.basic tbody tr td {
+    background-color: #fff;
 }
-.mh18_img img{
-  max-height: 20px;
-  cursor: pointer
+
+.table.basic .table tbody tr td {
+    border: none;
+}
+
+.mh18_img img {
+    max-height: 20px;
+    cursor: pointer
+}
+
+.table.basic>tbody>tr>td>table tbody tr td {
+    padding: 5px 0;
+}
+
+tfoot {
+    background: #fff;
 }
